--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="col-md-8 align-self-center text-center text-md-start navigation flex">
             <div class="d-flex align-items-center">
               <a href="https://jingyuhhh.github.io/" class="logo me-3">
-                <h3 class="text-black fs-30 mb-0">Jingyu Tang</h3>
+                <h3 class="text-black fs-30 mb-0">Jingyu(Julia) Tang</h3>
               </a>
               <p class="lead fs-18 mb-0">HCI + NLP Researcher</p>
               </div>
@@ -82,7 +82,7 @@
                 <figure class="rounded"><img src="./assets/img/profile_image.jpeg" alt=""/></figure>
               </div>
               <div class="col-md-9 add-padding">
-                <p>I am currently supervised by <a href="https://toby.li/">Prof. Toby Li</a>, and I will visit the US in person this summer. Previously, I was fortunate to be supervised by <a href="https://juhokim.com/">Prof. Juho Kim</a>, <a href="https://tianyi-zhang.github.io/">Prof. Tianyi Zhang</a>, and <a href="http://wanyao.me/">Prof. Yao Wan</a>.</p>
+                <p>I am currently iSure student at University of Notre Dame, supervised by <a href="https://toby.li/">Prof. Toby Li</a>. Previously, I was fortunate to be supervised by <a href="https://juhokim.com/">Prof. Juho Kim</a>, <a href="https://tianyi-zhang.github.io/">Prof. Tianyi Zhang</a>, and <a href="http://wanyao.me/">Prof. Yao Wan</a>.</p>
                 <p>My research interests lie at the intersection of Human-Computer Interaction and Natural Language Processing. 
                   <p>Specifically, I am interested in <br>
                   (1) deepening our understanding of the existing gaps in aligning LLMs with human values and needs.<br>
