--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <div class="col-md-9 add-padding">
                     <h6>Mind the Blind Spots: A Focus-Level Evaluation Framework for LLM Reviews</h6>
                     <p class="p-condense">Hyungyu Shin, <b>Jingyu Tang</b>, Yoonjoo Lee, Nayoung Kim, Hyunseung Lim, Ji Yong Cho, Hwajung Hong, Moontae Lee, Juho Kim</p>
-                    <p class="p-condense">in submission</p>
+                    <p class="p-condense">EMNLP 2025 main</p>
                     <p class="p-condense"><a href="https://arxiv.org/abs/2502.17086"><i class="fa-solid fa-file"></i> ArXiv</a></p>
                   </div>
                 </div>
